add arguments to make spark work with java 17 in tests